--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: RTest
-Version: 1.2.2
-Date: 2018-12-11
+Version: 1.2.3
+Date: 2018-12-22
 Title: A XML-Based Testing Framework for Automated Component Tests of R
         Packages
 Authors@R: c(
@@ -9,9 +9,8 @@ Authors@R: c(
     person("Sergej", "Potapov", , "sergej.potapov@roche.com", role = c("ctb")),
     person("Roche", role = c("cph", "fnd"))
     )
-Depends: R (>= 3.1.3), testthat (>= 1.0.0), magick(>= 1.3), methods,
-        XML, stringr, magrittr
-Imports: base64, jsonlite
+Depends: R (>= 3.1.3), testthat (>= 1.0.0), magick(>= 1.3), methods, XML
+Imports: base64, jsonlite, rlang, glue, magrittr, stringr
 Suggests: knitr, rmarkdown
 Description: This provides a framework for R packages developed for
 	a regulatory environment. It is based on the 'testthat' unit testing system and provides the adapter
@@ -19,7 +18,7 @@ Description: This provides a framework for R packages developed for
     reporting of the test results.
 Collate: RTest-package.R utils.R utils.examples.R utils.test.R
         utils.xmlRead.R utils.xmlWrite.R RTestCollection.R RTestCase.R
-        RTestCase.test-adapter.R
+        RTestCase.test-adapter.R utils.testthat.R
 SystemRequirements: ImageMagick++: ImageMagick-c++-devel (rpm) or
         libmagick++-dev (deb)
 VignetteBuilder: knitr
@@ -32,5 +31,6 @@ Author: Sebastian Wolf [aut, cre],
   Sergej Potapov [ctb],
   Roche [cph, fnd]
 Maintainer: Sebastian Wolf <sebastian@mail-wolf.de>
+BugReports: https://github.com/zappingseb/RTest/issues
 Repository: CRAN
 Date/Publication: 2018-12-14 17:30:03 UTC
