--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(
   "example_data_frame"						  ,
   "example_image"							  ,
   "example_list"							  ,
+  "example_list_large"						  ,
   "example_vector"							  ,
   "example_variable"						  ,
   
@@ -78,6 +79,10 @@ import(
 importFrom(
 	"stringr","str_extract")
 	
+importFrom(
+    "tcltk", "tktoplevel", "tklabel", "tclVar", "tkgrid", "tkentry", "tkbutton", "tkdestroy", 
+    "tkfocus", "tclvalue")
+    
 importFrom(
 	"magrittr","%>%")
 
@@ -116,7 +121,6 @@ exportMethods(
   "generic"									 ,               
   
   # Test Adapter
-  "test.RTest.test_returnValue_data.frame_cellbycell",
   "test.RTest.funct_01"
          
 )
