--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: RTest
 Version: 1.2.3
-Date: 2018-12-22
+Date: 2018-12-29
 Title: A XML-Based Testing Framework for Automated Component Tests of R
         Packages
 Authors@R: c(
@@ -10,7 +10,7 @@ Authors@R: c(
     person("Roche", role = c("cph", "fnd"))
     )
 Depends: R (>= 3.1.3), testthat (>= 1.0.0), magick(>= 1.3), methods, XML
-Imports: base64, jsonlite, rlang, glue, magrittr, stringr
+Imports: base64, jsonlite, rlang, glue, magrittr, stringr, tcltk
 Suggests: 
     knitr,
     rmarkdown,
