--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,23 @@ cache: packages
 pandoc_version: 1.19.2.1
 addons:
   apt:
+    update: true
+    sources:
+      - sourceline: 'ppa:opencpu/imagemagick'
+      - sourceline: 'ppa:ubuntugis/ppa'
     packages:
       - libxml2-dev
+      - libmagick++-dev
+      - librsvg2-dev
+      - libwebp-dev
+      - libpoppler-cpp-dev
+      - libtesseract-dev
+      - libleptonica-dev
+      - tesseract-ocr-eng
+      - r-cran-rgdal
+      - libfftw3-dev
+      - cargo
+      
+after_success:
+  - Rscript -e 'covr::coveralls()'
+  
