--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ language: R
 sudo: false
 cache: packages
 pandoc_version: 1.19.2.1
+r_github_packages:
+  - r-lib/covr
 addons:
   apt:
     update: true
@@ -30,5 +32,5 @@ script:
 - xvfb-run R CMD check *tar.gz --as-cran
  
 after_success:
-  - Rscript -e 'covr::coveralls(type=c("vignettes","tests","examples")'
+  - xvfb-run Rscript -e 'covr::coveralls(type=c("vignettes","tests","examples")'
  
