--- a/.travis.yml
+++ b/.travis.yml
@@ -32,5 +32,5 @@ script:
 - xvfb-run R CMD check *tar.gz --as-cran
  
 after_success:
-  - xvfb-run Rscript -e 'covr::coveralls(type=c("vignettes","tests","examples")'
+  - xvfb-run Rscript -e 'covr::coveralls(type=c("vignettes","tests","examples"))'
  
