added GS dependency

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ addons:
       - cargo
       - libgs-dev
       - qpdf
+      - ghostscript
 
 script:
 - R CMD build . --compact-vignettes=gs+qpdf
