--- a/.travis.yml
+++ b/.travis.yml
@@ -38,5 +38,13 @@ script:
  
 after_success:
   - tar -C .. -xf $PKG_TARBALL
-  - xvfb-run Rscript -e 'covr::coveralls(type=c("vignettes","tests","examples"))'
- 
+  - xvfb-run Rscript -e "covr::codecov(type=c("vignettes","tests","examples"))"
+  - xvfb-run Rscript -e 'covr::coveralls(type=c("vignettes","tests","examples"),service_name="travis-pro")'
+
+deploy:
+  provider: releases
+  api_key: $GITHUB_TOKEN
+  file: $PKG_TARBALL
+  skip_cleanup: true
+  on:
+    tags: true
