--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ deploy:
   - provider: pages
     skip-cleanup: true
     github-token: $GITHUB_TOKEN
-    keep-history: true
+    keep-history: false
     local-dir: docs
     on:
       branch: master
