--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ os:
 env:
   - PKG_TARBALL=RTest_1.2.3.1000.tar.gz
 sudo: false
+
+before_install:
+  - if [[ "$OSTYPE" != "linux-gnu" ]]; then sudo tlmgr install framed titling; fi
+  
 cache:
  - packages
  - apt: true
@@ -35,6 +39,7 @@ addons:
       - libgs-dev
       - qpdf
       - ghostscript
+
 
 script:
 - R CMD build . --compact-vignettes=gs+qpdf
