Changed commit go get rid of note in Linux and being stuck in OSX

--- a/.travis.yml
+++ b/.travis.yml
@@ -66,6 +66,4 @@ matrix:
       - sudo tlmgr install framed titling
     script:
       - R CMD build . --compact-vignettes=gs+qpdf
-      - Xvfb :99 -ac -screen 0 1024x768x8; R CMD check *tar.gz --as-cran
-
-
+      - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then ( sudo Xvfb :99 -ac -screen 0 1024x768x8; R CMD check *tar.gz --as-cran ) & fi
