--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@
 language: R
 env:
   - PKG_TARBALL=RTest_1.2.3.1000.tar.gz
-sudo: false
+sudo: required
 
 cache:
  - packages
@@ -30,6 +30,9 @@ addons:
       - tesseract-ocr-eng
       - r-cran-rgdal
       - libfftw3-dev
+      - libxxf86vm-dev
+      - x11proto-xf86vidmode-dev
+      - xvfb
       - cargo
       - libgs-dev
       - qpdf
@@ -64,6 +67,9 @@ matrix:
     os: osx
     before_install:
       - sudo tlmgr install framed titling
+    # FROM https://github.com/travis-ci/travis-ci/issues/7313
+    before_script:
+      - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then ( sudo Xvfb :99 -ac -screen 0 1024x768x8; echo ok ) & fi
     script:
       - R CMD build . --compact-vignettes=gs+qpdf
-      - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then ( sudo Xvfb :99 -ac -screen 0 1024x768x8; R CMD check *tar.gz --as-cran ) & fi
+      - R CMD check *tar.gz --as-cran
