--- a/.travis.yml
+++ b/.travis.yml
@@ -67,6 +67,8 @@ matrix:
     os: osx
     osx_image: xcode8
     before_install:
+      - sudo brew update
+      - brew install tcl-tk --with-tk
       - sudo tlmgr install framed titling
     # FROM https://github.com/travis-ci/travis-ci/issues/7313
     before_script:
