--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,8 @@ matrix:
     osx_image: xcode8
     before_install:
       - sudo brew update
-      - brew install tcl-tk --with-tk
+      - brew install homebrew/dupes/tcl-tk
+      - brew link --overwrite --force tcl-tk; brew unlink tcl-tk
       - sudo tlmgr install framed titling
     # FROM https://github.com/travis-ci/travis-ci/issues/7313
     before_script:
