--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,9 @@ matrix:
     before_install:
       - brew update
       - brew install tcl-tk --with-tk
-      # - brew link --overwrite --force tcl-tk; brew unlink tcl-tk
+      - brew link --overwrite --force tcl-tk; brew unlink tcl-tk
+      - brew install freetype 
+      - brew link --overwrite freetype
       - sudo tlmgr install framed titling
     # FROM https://github.com/travis-ci/travis-ci/issues/7313
     before_script:
