--- a/.travis.yml
+++ b/.travis.yml
@@ -68,6 +68,7 @@ matrix:
     osx_image: xcode8
     before_install:
       - brew update
+      - brew install xquartz
       - brew install tcl-tk --with-tk
       - brew link --overwrite --force tcl-tk; brew unlink tcl-tk
       - brew install freetype 
