try with old display command

--- a/.travis.yml
+++ b/.travis.yml
@@ -77,7 +77,7 @@ matrix:
     # FROM https://github.com/travis-ci/travis-ci/issues/7313
     before_script:
       - "export DISPLAY=:99.0"
-      - sudo Xvfb :99 -ac -screen 0 1024x768x8 && echo "ok"
+      - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then ( sudo Xvfb :99 -ac -screen 0 1024x768x8; echo ok ) & fi
     script:
       - R CMD build . --compact-vignettes=gs+qpdf
       - R CMD check *tar.gz --as-cran
